# cmake_js_udemy_training

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cc
cmake/: AddGitSubmodule.cmake
configured/: CMakeLists.txt  config.hpp.in
src/my_lib/: CMakeLists.txt  my_lib.cc
